--- a/FIgma/index.html
+++ b/FIgma/index.html
@@ -47,6 +47,7 @@
       </div>
     </header>
     <main>
+      <!-- hero -->
       <div class="hero">
         <div class="main-content">
           <div class="body">
@@ -117,6 +118,146 @@
               <p class="desc stats">
                 <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Popular -->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <div class="infor">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <div class="controls">
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="course-list">
+            <!-- item1 -->
+            <div class="course-item">
+              <a href=""
+                ><img
+                  src="./assets/img/peter-thomas-DBx3mdteZ4o-unsplash.jpg"
+                  alt="Basic web design"
+                  class="thu"
+              /></a>
+              <div class="infor">
+                <div class="head">
+                  <a href=""><h3 class="title">Basic web design</h3></a>
+                  <div class="rating">
+                    <img
+                      src="./assets/img/Icons/Star 6.svg"
+                      alt=""
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn2">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item2 -->
+            <div class="course-item">
+              <a href=""
+                ><img
+                  src="./assets/img/peter-thomas-DBx3mdteZ4o-unsplash.jpg"
+                  alt="UI/UX design"
+                  class="thu"
+              /></a>
+              <div class="infor">
+                <div class="head">
+                  <a href=""><h3 class="title">UI/UX design</h3></a>
+                  <div class="rating">
+                    <img
+                      src="./assets/img/Icons/Star 6.svg"
+                      alt=""
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn2">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- item3 -->
+            <div class="course-item">
+              <a href=""
+                ><img
+                  src="./assets/img/peter-thomas-DBx3mdteZ4o-unsplash.jpg"
+                  alt="Web App design "
+                  class="thu"
+              /></a>
+              <div class="infor">
+                <div class="head">
+                  <a href=""><h3 class="title">Web App design</h3></a>
+                  <div class="rating">
+                    <img
+                      src="./assets/img/Icons/Star 6.svg"
+                      alt=""
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn2">Book Now</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
