--- a/FIgma/index.html
+++ b/FIgma/index.html
@@ -262,6 +262,40 @@
           </div>
         </div>
       </div>
+      <!-- feedback -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-items">
+              <!-- khối bên trái -->
+              <div class="infor">
+                <img src="./assets/img/avatar4.avif" alt="" class="avatar" />
+                <p class="desc-nhanvat">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot ative"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/img/Icons/Open-quote.svg"
+                  alt=""
+                  class="open-quote"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
