--- a/FIgma/index.html
+++ b/FIgma/index.html
@@ -266,10 +266,40 @@
       <div class="feedback">
         <div class="main-content">
           <div class="feedback-list">
+            <!-- item 1 -->
             <div class="feedback-items">
               <!-- khối bên trái -->
               <div class="infor">
                 <img src="./assets/img/avatar4.avif" alt="" class="avatar" />
+                <p class="desc-nhanvat">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot ative"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/img/Icons/Open-quote.svg"
+                  alt=""
+                  class="open-quote"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+
+            <!-- item 2 -->
+            <div class="feedback-items">
+              <!-- khối bên trái -->
+              <div class="infor">
+                <img src="./assets/img/avatar5.webp" alt="" class="avatar" />
                 <p class="desc-nhanvat">Peter Moor</p>
                 <p class="desc">Student of Web Design</p>
                 <div class="dots">
@@ -292,6 +322,91 @@
                   skills I've learned."
                 </blockquote>
               </div>
+            </div>
+
+            <!-- item 3 -->
+            <div class="feedback-items">
+              <!-- khối bên trái -->
+              <div class="infor">
+                <img src="./assets/img/avatar6.webp" alt="" class="avatar" />
+                <p class="desc-nhanvat">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot ative"></span>
+                </div>
+              </div>
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/img/Icons/Open-quote.svg"
+                  alt=""
+                  class="open-quote"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- features 1 -->
+      <div class="feature">
+        <div class="main-content">
+          <div class="body">
+            <div class="images">
+              <img
+                class="lower"
+                src="./assets/img/learn1.avif"
+                alt=" Learner outcomes through our awesome platform"
+              />
+              <img
+                src="./assets/img/learn2.avif"
+                alt=" Learner outcomes through our awesome platform"
+              />
+            </div>
+            <div class="content">
+              <h2 class="heading-lv2">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <a href="#!" class="btn bnt-sign-up">Sign up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- features 1 -->
+      <div class="feature feature-2nd">
+        <div class="main-content">
+          <div class="body">
+            <div class="images">
+              <img
+                class="lower"
+                src="./assets/img/learn3.avif"
+                alt=" Learner outcomes through our awesome platform"
+              />
+            </div>
+            <div class="content">
+              <h2 class="heading-lv2">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="desc">
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
+              </p>
+              <a href="#!" class="btn bnt-sign-up">Join Now</a>
             </div>
           </div>
         </div>
