--- a/FIgma/index.html
+++ b/FIgma/index.html
@@ -386,7 +386,7 @@
           </div>
         </div>
       </div>
-      <!-- features 1 -->
+      <!-- features 2 -->
       <div class="feature feature-2nd">
         <div class="main-content">
           <div class="body">
@@ -408,6 +408,189 @@
               </p>
               <a href="#!" class="btn bnt-sign-up">Join Now</a>
             </div>
+          </div>
+        </div>
+      </div>
+      <!-- blogs -->
+      <div class="blogs">
+        <div class="main-content">
+          <!-- top -->
+          <div class="blog-top">
+            <h2 class="heading-lv2">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+          <!-- list -->
+          <div class="blog-list">
+            <!-- item1 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog1.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item2 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog2.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item3 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog3.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item4 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog1.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item5 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog2.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item6 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog3.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item7 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog1.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item8 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog2.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+            <!-- item9 -->
+            <div class="item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/blog3.avif"
+                  alt="How to become a pro web designer in 2022 and get remot job?"
+                  class="thumb"
+              /></a>
+              <div class="infor">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot ative"></span>
+            <span class="dot"></span>
           </div>
         </div>
       </div>
