--- a/FIgma/index.html
+++ b/FIgma/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Figma to HTML</title>
   </head>
-  <body style="height: 10000px">
+  <body>
+    <!-- Header -->
     <header class="header fixed">
       <div class="main-content">
         <div class="body">
@@ -46,6 +47,7 @@
         </div>
       </div>
     </header>
+    <!-- Main -->
     <main>
       <!-- hero -->
       <div class="hero">
@@ -595,5 +597,91 @@
         </div>
       </div>
     </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="main-content">
+        <div class="row">
+          <!-- colum1 -->
+          <div class="colum">
+            <img src="./assets/img/Lesson.white .svg" alt="" class="logo" />
+            <p class="desc">
+              Need to help for your dream Career? trust us. With Lesson, study
+              becomes a lot easier with us.
+            </p>
+            <div class="social">
+              <a href="">
+                <img src="./assets/img/Icons/twitter.svg" alt="twitter" />
+              </a>
+              <a href=" ">
+                <img src="./assets/img/Icons/f.svg" alt="f" />
+              </a>
+              <a href="">
+                <img src="./assets/img/Icons/linked_in.svg" alt="linked" />
+              </a>
+              <a href="">
+                <img src="./assets/img/Icons/instagram.svg" alt="instagram" />
+              </a>
+            </div>
+          </div>
+          <!-- colum2 -->
+          <div class="colum">
+            <h3 class="title">Company</h3>
+            <ul class="list">
+              <li>
+                <a href="#! ">About Us</a>
+              </li>
+              <li>
+                <a href="#! ">Features</a>
+              </li>
+              <li>
+                <a href="#! ">Our Pricing</a>
+              </li>
+              <li>
+                <a href="#! ">Latest News</a>
+              </li>
+            </ul>
+          </div>
+          <!-- colum3 -->
+          <div class="colum">
+            <h3 class="title">Support</h3>
+            <ul class="list">
+              <li>
+                <a href="#! ">FAQ’s</a>
+              </li>
+              <li>
+                <a href="#! ">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="#! ">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#! ">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- colum4 -->
+          <div class="colum">
+            <h3 class="title">Address</h3>
+            <ul class="list">
+              <li>
+                <a href="#! "
+                  ><strong>Location:</strong> 27 Division St, New York, NY
+                  10002, USA</a
+                >
+              </li>
+              <li>
+                <a href="#! "><strong>Email:</strong> email@gmail.com</a>
+              </li>
+              <li>
+                <a href="#! "><strong>Phone:</strong> + 000 1234 567 890</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copywrite">
+          <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
